Bug 216351 - Opening a draft with more than 200 recipients truncates the recipient list to 200 recipients
Summary: Opening a draft with more than 200 recipients truncates the recipient list to...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-27 08:53 UTC by Patrick
Modified: 2011-12-31 17:23 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments
E-Mail to be opened in KMail (8.57 KB, application/octet-stream)
2009-11-27 08:55 UTC, Patrick
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick 2009-11-27 08:53:46 UTC
Version:            (using KDE 4.3.3)
Installed from:    Gentoo Packages

Creating a (mass) mail with 250 recipients and saving it as draft works. But when you try to re-open the draft (which takes a considerable amount of CPU time, on my system 15 seconds), KMail will tell you "Truncating recipients list to 200 of 250 entries.". The remaining 50 recipients have then to be added again. This is very inconvenient, and I'm sure it can be solved more elegantly.

How to reproduce this bug:
1) Download the kmail_testcase.mbox which I will attach after submitting this bug report
2) Open the file in KMail (press Ctrl-o and choose the file)
3) Attempt to edit the mail that KMail opened (and which correctly shows 250 recipients) (press t)
4) Wait for a few seconds
Comment 1 Patrick 2009-11-27 08:55:02 UTC
Created attachment 38630 [details]
E-Mail to be opened in KMail
Comment 2 Björn Ruberg 2010-03-07 23:19:07 UTC
Confirmed in KDE 4.4.0
Comment 3 Axel Braun 2010-04-14 12:56:07 UTC
...and in 4.4.2 as well. Additionally, it needs ages to open the mail, while KMail is frozen until the mail is opened - this has not changed to the original bug entry
Comment 4 Axel Braun 2011-06-21 12:04:33 UTC
...and still the same problem in 4.6.4
Comment 5 Laurent Montel 2011-09-08 14:43:04 UTC
There is not gui to configurate it but it's possible.
Comment 6 Laurent Montel 2011-09-09 10:52:23 UTC
Git commit f3476527e4f4c0e269590bf5108cdce211b9c2c7 by Montel Laurent.
Committed on 09/09/2011 at 12:50.
Pushed by mlaurent into branch 'master'.

Fix Bug 216351 - Opening a draft with more than 200 recipients truncates the recipient list to 200 recipients

If we have a config for it allow to configurate it.

FIXED-IN: 4.7.2
BUG: 216351

M  +14   -0    kmail/configuredialog.cpp
M  +1    -0    kmail/configuredialog_p.h
M  +1    -1    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/f3476527e4f4c0e269590bf5108cdce211b9c2c7
Comment 7 Laurent Montel 2011-09-09 10:54:13 UTC
Git commit 8b8716777b8aacaa2b881570871c46d8cf3fb9e5 by Montel Laurent.
Committed on 09/09/2011 at 12:50.
Pushed by mlaurent into branch '4.7'.

Fix Bug 216351 - Opening a draft with more than 200 recipients truncates the recipient list to 200 recipients

If we have a config for it allow to configurate it.

FIXED-IN: 4.7.2
BUG: 216351
(cherry picked from commit f3476527e4f4c0e269590bf5108cdce211b9c2c7)

M  +14   -0    kmail/configuredialog.cpp
M  +1    -0    kmail/configuredialog_p.h
M  +1    -1    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/8b8716777b8aacaa2b881570871c46d8cf3fb9e5
Comment 8 Axel Braun 2011-09-09 13:16:05 UTC
(In reply to comment #7)
> 
> If we have a config for it allow to configurate it.
> 
> FIXED-IN: 4.7.2
> BUG: 216351
> (cherry picked from commit f3476527e4f4c0e269590bf5108cdce211b9c2c7)

Is this configuration in release 4.7.2, or already existing (though quite unknown)?
Comment 9 Laurent Montel 2011-09-09 13:23:58 UTC
kde 4.7.2 was not release in one month so it will be in 4.7.2
Comment 10 Bruno Haible 2011-12-31 17:23:51 UTC
The maximum number of recipients in a mail can be set through the preferences,
but the default is just 1. This is registered as a new bug:
https://bugs.kde.org/show_bug.cgi?id=290272