Fix Bug 216351 - Opening a draft with more than 200 recipients truncates the recipient list to 200 recipients

If we have a config for it allow to configurate it.

FIXED-IN: 4.7.2
BUG: 216351